--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 .g-menu-toggle {
-    padding: 0.5em;
+    padding: 0.5em 3.5em 0.5em 0.5em;
     position: relative;
 }
 
@@ -55,6 +55,11 @@ html {
     display: block;
     padding: 1em;
     position: relative;
+}
+
+.g-menu-state ~ .g-menu-item,
+.g-menu-state ~ a {
+    padding-right: 3.5em;
 }
 
 .g-menu-icon,
@@ -148,7 +153,7 @@ html {
         top: 0;
     }
 
-    .g-menu-item,
+    .g-menu-state ~ .g-menu-item,
     .g-menu-state ~ a {
         padding-right: 2.5em;
     }
